--- a/templates/result-pages.html.twig
+++ b/templates/result-pages.html.twig
@@ -1,16 +1,29 @@
-<h2>{{'Pages with visitor questions'|trans}}:</h2>
-
-{% for page in content.pages %}
-   <br>{{page.title}} ({{page.link}}):<a href="/questionnaire/page/{{page.id}}">{{'Statistics'|trans}}</a>
-	<form {{content.deletePageForm.attributes }} method="post">
-		{{ content.deletePageForm.form_build_id }}
-		{{ content.deletePageForm.form_token }}
-		{{ content.deletePageForm.form_id }}
-		{{ content.deletePageForm.subject }}
-		{{ content.deletePageForm.message }}
-		<div class="js-form-item form-item js-form-type-textfield form-type-textfield js-form-item-id form-item-id form-no-label" style="display:none">
-			<input data-drupal-selector="edit-id" type="text" id="edit-id" name="id" value="{{page.id}}" size="60" maxlength="128" placeholder="PageId" class="form-text required" required="required" aria-required="true">
-		</div>		
-		{{ content.deletePageForm.actions.submit }}
-	</form>    
-{% endfor %}
+<div class="questionnaire">
+	<h2>{{'Pages with visitor questions'|trans}}:</h2>
+	<table>
+	  <tr>
+	    <th>{{'Title'|trans}}</th>
+	    <th>{{'Link'|trans}}</th>
+	    <th>{{'Del'|trans}}</th>
+	  </tr>	
+		{% for page in content.pages %}
+		  <tr>
+		    <td>{{page.title}} : <a href="/questionnaire/page/{{page.id}}">{{'Statistics'|trans}}</a></td>
+		    <td>{{page.link}}</td>
+		    <td>
+					<form {{content.deletePageForm.attributes }} method="post">
+						{{ content.deletePageForm.form_build_id }}
+						{{ content.deletePageForm.form_token }}
+						{{ content.deletePageForm.form_id }}
+						{{ content.deletePageForm.subject }}
+						{{ content.deletePageForm.message }}
+						<div class="js-form-item form-item js-form-type-textfield form-type-textfield js-form-item-id form-item-id form-no-label" style="display:none">
+							<input data-drupal-selector="edit-id" type="text" id="edit-id" name="id" value="{{page.id}}" size="60" maxlength="128" placeholder="PageId" class="form-text required" required="required" aria-required="true">
+						</div>		
+						{{ content.deletePageForm.actions.submit }}
+					</form> 
+		    </td>
+		  </tr>	
+		{% endfor %}
+	</table>
+</div>
